--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <p><i>Creado el 16/09/2023</i></p>
     <!--Es comentario-->
     <input type="text" id="txtNombre">
-    <button class="btn btn-enviar">Saludar</button>
-    <button class="btn btn-reseteo" type="reset">Limpiar</button>
+    <button class="btn btn-enviar" onclick="Saludar()">Saludar</button>
+    <button class="btn btn-reseteo" type="reset" onclick="Resetear();">Limpiar</button>
 </body>
+<script src="js/funciones.js"></script>
 </html>
